Mock up navigation drawer behavior

--- a/notebooks/Examples.ipynb
+++ b/notebooks/Examples.ipynb
@@ -17,12 +17,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c779bf7ef6ff44859d81d1de51d050cb",
+       "model_id": "ca1f4bc35cfa42e6b06ec5956fa5bcb5",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Application(children=[NavigationDrawer(app=True, clipped=True)])"
+       "Application(children=[Toolbar(app=True, children=[Btn(children=[Icon(children=['chevron_left'])], icon=True), …"
       ]
      },
      "metadata": {},
